--- a/CRUDProfAluno/Views/Shared/_Layout.cshtml
+++ b/CRUDProfAluno/Views/Shared/_Layout.cshtml
@@ -24,6 +24,8 @@
                     <li>@Html.ActionLink("Início", "Index", "Home")</li>
                     <li>@Html.ActionLink("Sobre", "About", "Home")</li>
                     <li>@Html.ActionLink("Contato", "Contact", "Home")</li>
+                    <li>@Html.ActionLink("Professores", "index", "Professores")</li>
+                    <li>@Html.ActionLink("Alunos", "index", "Alunos")</li>
                 </ul>
             </div>
         </div>
