--- a/CRUDProfAluno/Views/Alunos/Delete.cshtml
+++ b/CRUDProfAluno/Views/Alunos/Delete.cshtml
@@ -12,6 +12,14 @@
     <hr />
     <dl class="dl-horizontal">
         <dt>
+            @Html.DisplayNameFor(model => model.Professor.Nome)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Professor.Nome)
+        </dd>
+
+        <dt>
             @Html.DisplayNameFor(model => model.Nome)
         </dt>
 
