--- a/CRUDProfAluno/Views/Alunos/Index.cshtml
+++ b/CRUDProfAluno/Views/Alunos/Index.cshtml
@@ -12,7 +12,7 @@
 <table class="table">
     <tr>
         <th>
-            @Html.DisplayNameFor(model => model.Professor.Nome)
+            @Html.DisplayNameFor(model => model.Professor)
         </th>
         <th>
             @Html.DisplayNameFor(model => model.Nome)
