--- a/CRUDProfAluno/Views/Professores/Details.cshtml
+++ b/CRUDProfAluno/Views/Professores/Details.cshtml
@@ -4,23 +4,30 @@
     ViewBag.Title = "Details";
 }
 
-<h2>Details</h2>
-
 <div>
-    <h4>Professor</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.Nome)
-        </dt>
+    <h1> @Html.DisplayFor(model => model.Nome)</h1>
 
-        <dd>
-            @Html.DisplayFor(model => model.Nome)
-        </dd>
-
-    </dl>
+   <hr/>
+    <div>
+        <h4>Lista de Alunos</h4>
+        <table class="table table-hover">
+                <tr>
+                    <th scope="col">@Html.DisplayName("Nome")</th>
+                    <th scope="col">@Html.DisplayName("DataNascimento")</th>
+                </tr>
+            
+                @foreach (var item in Model.Alunos)
+                {
+                    <tr>
+                        <td>@Html.DisplayFor(modelItem => item.Nome)</td>
+                        <td>@Html.DisplayFor(modelItem => item.DataNascimento)</td>
+                    </tr>
+                }
+            
+        </table>
+    </div>
 </div>
 <p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Editar Professor", "Edit", new { id = Model.Id }) |
+    @Html.ActionLink("Voltar", "Index")
 </p>
