--- a/CRUDProfAluno/Views/Alunos/Delete.cshtml
+++ b/CRUDProfAluno/Views/Alunos/Delete.cshtml
@@ -4,9 +4,9 @@
     ViewBag.Title = "Delete";
 }
 
-<h2>Delete</h2>
+<h2>Deletar aluno</h2>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Você deseja realmente deletar este aluno?</h3>
 <div>
     <h4>Aluno</h4>
     <hr />
@@ -42,7 +42,7 @@
 
         <div class="form-actions no-color">
             <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
+            @Html.ActionLink("Voltar", "Index")
         </div>
     }
 </div>
