--- a/CRUDProfAluno/Views/Alunos/Index.cshtml
+++ b/CRUDProfAluno/Views/Alunos/Index.cshtml
@@ -7,39 +7,27 @@
 <h2>Lista de Alunos</h2>
 
 <p>
-    @Html.ActionLink("Create New", "Create")
+    @Html.ActionLink("Criar Novo Aluno", "Create")
 </p>
 <table class="table">
     <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.Professor)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Nome)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.DataNascimento)
-        </th>
+        <th>@Html.DisplayNameFor(model => model.Professor)</th>
+        <th>@Html.DisplayNameFor(model => model.Nome)</th>
+        <th>@Html.DisplayNameFor(model => model.DataNascimento)</th>
         <th></th>
     </tr>
 
 @foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.Professor.Nome)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Nome)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.DataNascimento)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
-            @Html.ActionLink("Details", "Details", new { id=item.Id }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.Id })
-        </td>
-    </tr>
+<tr>
+    <td>@Html.DisplayFor(modelItem => item.Professor.Nome)</td>
+    <td>@Html.DisplayFor(modelItem => item.Nome)</td>
+    <td>@Html.DisplayFor(modelItem => item.DataNascimento)</td>
+    <td>
+        @Html.ActionLink("Editar", "Edit", new { id = item.Id }) |
+        @Html.ActionLink("Detalhes", "Details", new { id = item.Id }) |
+        @Html.ActionLink("Deletar", "Delete", new { id = item.Id })
+    </td>
+</tr>
 }
 
 </table>
