Ajustes de layout

--- a/CRUDProfAluno/Views/Professores/MediaIdadeAlunos15a17.cshtml
+++ b/CRUDProfAluno/Views/Professores/MediaIdadeAlunos15a17.cshtml
@@ -1,14 +1,11 @@
 ﻿@model IEnumerable<CRUDProfAluno.Models.Professor>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "MediaIdadeAlunos15a17";
 }
 
-<h2>Lista de Professores</h2>
+    <h2>Professores cuja a media de idade dos alunos é de 15 a 17 anos</h2>
 
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
 <table class="table">
     <tr>
         <th>
