--- a/CRUDProfAluno/Views/Professores/Index.cshtml
+++ b/CRUDProfAluno/Views/Professores/Index.cshtml
@@ -7,7 +7,7 @@
 <h2>Lista de Professores</h2>
 
 <p>
-    @Html.ActionLink("Create New", "Create")
+    @Html.ActionLink("Criar novo professor", "Create")
 </p>
 <table class="table">
     <tr>
