--- a/CRUDProfAluno/Views/Shared/_Layout.cshtml
+++ b/CRUDProfAluno/Views/Shared/_Layout.cshtml
@@ -22,8 +22,8 @@
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Professores", "index", "Professores")</li>
                     <li>@Html.ActionLink("Alunos", "index", "Alunos")</li>
-                    <li>@Html.ActionLink("Alunos maiores de 16 anos", "Maiores16Anos", "Alunos")</li>
-                    <li>@Html.ActionLink("Professores cuja a media de idade dos alunos é de 15 a 17 anos", "MediaIdadeAlunos15a17", "Professores")</li>
+                    <li>@Html.ActionLink("Lista 1", "Maiores16Anos", "Alunos")</li>
+                    <li>@Html.ActionLink("Lista 2", "MediaIdadeAlunos15a17", "Professores")</li>
                 </ul>
             </div>
         </div>
